# KillTeamCalculator

./: hello.py  killteam2024.db  pyproject.toml
src/backend/: KTSim.py  api.py  database.py  test_db.py
src/frontend/: app.py
