[project]
name = "killteamcalculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Loïc Musy", email = "loic@famille-musy.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "numpy>=2.2.2",
    "panel>=1.6.0",
    "polars>=1.22.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
]
